...
    <string name="Delete_Watch">Delete/Watch</string>
    <string name="Watch_or_Delete_File">Watch or Delete File:</string>
    <string name="Delete_All_Files">Delete All Files?</string>
    <string name="Files_Delete_successfully">Files Delete successfully</string>
    <string name="Yo_want_to_see_this_File">You want to see this File?</string>
    <string name="You_want_to_see_this_File">You want to see this File?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register">register</string>
    <string name="Go_To_login">Go To login</string>
    <string name="Cv_was_already_sent">Cv was already sent</string>
    <string name="Cv_sent_successfully2">Cv sent successfully</string>
    <string name="Cv_already_sent">Cv already sent</string>
...
    <string name="admin_comments">Admin Comments</string>
    <string name="add_comment">Add Comment</string>
    <string name="delete_job">delete job</string>
    <string name="are_you_sure_you_want_to_clear_comments">are you sure you want to clear comments?</string>
    <string name="delete_account">Are you sure you want to delete account?</string>
    <string name="Delete_Account">Delete Account</string>
    <string name="delete_acount">Delete Acount</string>
    <string name="q1_how_does_your_job_search_application_work">Q1: How does your job search application work?</string>
    <string name="a1_our_system_get_jobs_post_from_potential_jobs_recruiters_and_post_them_in_our_search_engine">A1: Our system get jobs post from potential jobs recruiters and post them in our search engine.</string>
    <string name="q2_how_do_i_search_for_jobs_using_your_application">Q2: How do I search for jobs using your application?</string>
    <string name="a2_in_the_home_button_you_have_the_ability_to_search_for_jobs_you_choose_the_job_type_and_job_location_and_press_the_search_button_to_view_all_potential_jobs">A2: In the Home Button you have the ability to search for jobs,you choose, the job type and job location and press the search button to view all potential jobs.</string>
    <string name="q3_how_do_i_apply_for_a_job_using_your_application">Q3: How do I apply for a job using your application?</string>
    <string name="a3_in_the_profile_page_you_need_to_upload_a_cv_in_pdf_form_and_in_the_search_engine_you_will_need_to_apply_your_cv_on_the_job_you_want_using_the_search_engine">A3: In the Profile Page you need to upload a CV in pdf form, and in the search engine you will need to apply your cv on the job you want using the search engine.</string>
...
