...
        android:text="@string/report_of_user"
        android:textColor="@color/white" />

    <include layout="@layout/navbar"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnReport"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FF5722"
        android:text="@string/delete_acount"
...
